--- a/1. dev-basics/1. development-setup.md
+++ b/1. dev-basics/1. development-setup.md
@@ -1,13 +1,7 @@
 # Development Setup
 
-## 1. Install Linux - preferably Ubuntu 20.04 or later
+## 1. Install Mac
 
-You need a linux equivalent operating system loaded computer for this Bootcamp. If you do not have Linux, **STOP HERE** and install Ubuntu 20.04 or later on your development machine.
-
-### NOTE
-- Macs are also acceptable as developer machines.
-- Any flavour of Linux is acceptable.
-- Windows is **NOT acceptable**. If you have Windows, install Ubuntu.
 
 ### Reference
 [https://github.com/mountblue/gearup/blob/master/dual_booting_ubuntu_windows.md](https://github.com/mountblue/gearup/blob/master/dual_booting_ubuntu_windows.md)
