--- a/1. dev-basics/2. cli.md
+++ b/1. dev-basics/2. cli.md
@@ -14,6 +14,7 @@ Computers understand the language of zeros and ones known as binary language. In
 - CSH (C SHell) - The C shell's syntax and usage are very similar to the C programming language.
 - KSH (Korn SHell) - Created by David Korn at AT & T Bell Labs. The Korn Shell also was the base for the POSIX Shell standard specifications.
 - TCSH - It is an enhanced but completely compatible version of the Berkeley UNIX C shell (CSH).
+- Zsh (Z Shell) is a powerful, customizable Unix shell with features like auto-suggestions, improved globbing, and plugin support, and it's the default shell in macOS.
 
 Please note that each shell does the same job, but each understands different command syntax and provides different built-in functions. Under MS-DOS, the shell name is COMMAND.COM which is also used for the same purpose, but it is by far not as powerful as our Linux Shells are!
 
