--- a/1. dev-basics/2. cli.md
+++ b/1. dev-basics/2. cli.md
@@ -44,6 +44,9 @@ echo $SHELL
 ps $$
 ps -p $$
 ```
+- ps means process state 
+- -p means it is flag used to filter to show specific process id only (PID)
+- $$ indicates current running shell (by default ccurrent running shell is zsh shell in mac os)
 The following sample output indicate that I am using bash shell:
 
 ```
