--- a/1. dev-basics/2. cli.md
+++ b/1. dev-basics/2. cli.md
@@ -55,6 +55,12 @@ PID TTY          TIME CMD
 13931 pts/4    00:00:00 bash
 ```
 
+output of zsh shell
+```
+PID    TT      STAT         TIME   COMMAND
+10012  s000     S         0:00.06    -zsh
+```
+
 ## Unix Philosophy
 
 The Unix philosophy is a philosophical approach to developing software based on the experience of leading developers of the Unix operating system. The following philosophical approaches also apply to Linux operating systems.
